[package]
name = "federation-accounts"
version = "0.1.0"
authors = ["Ricardo Almeida <ricardoluiz1.almeida@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = { version = "=2.5.4", default-features = false }
async-graphql-warp = "=2.5.4"
tokio = { version = "=1.4.0", features = ["macros", "rt-multi-thread"] }
warp = "0.3"
