[package]
name = "federation-accounts"
version = "0.1.0"
authors = ["Ricardo Almeida <ricardoluiz1.almeida@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = { version = "=2.8.4", default-features = false }
async-graphql-warp = "=2.8.4"
tokio = { version = "=1.5.0", features = ["macros", "rt-multi-thread"] }
warp = "0.3"
